Added: auth logical and used jwt

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-MONGO_URL=mongodb://localhost:27017/umbrella
-PORT=5000
+MONGO_URL = mongodb://localhost:27017/umbrella
+PORT = 5000
+JWT_SECRET = jusan
